--- a/photos.css
+++ b/photos.css
@@ -154,6 +154,11 @@ width: 100%;
 }
 
 @media screen and (max-width: 450px) {
+
+    .offcanvas li {
+        width: 140px;
+      }
+      
 .container-header video{
 height: 20vh;
 }
