--- a/about.css
+++ b/about.css
@@ -137,6 +137,9 @@ body {
 }
 
 @media screen and (max-width: 450px) {
+  .offcanvas li {
+    width: 140px;
+  }
   .container-header video{
     height: 20vh;
   }
