--- a/videos.css
+++ b/videos.css
@@ -336,6 +336,9 @@ a {
 }
 
 @media screen and (max-width: 450px) {
+  .offcanvas li {
+    width: 140px;
+  }
   .container-header video{
     height: 20vh;
   }
